src/objects/E2_Effort__c.object
<CustomObject>
    <description>Estimator 2.0</description>
    <fields>
        <fullName>Complexity_Factor_High__c</fullName>
        <description>If no value, High or Low factors simply do not act on orignal effort (in some cases, this is logical)</description>
        <inlineHelpText>Adds this % to original LOE when Scope Complexity = High</inlineHelpText>
        <label>Complexity Adder</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Complexity_Factor_Low__c</fullName>
        <description>If no value, High or Low factors simply do not act on orignal effort (in some cases, this is logical)</description>
        <inlineHelpText>Subtracts this % from original LOE when Scope Complexity = Low</inlineHelpText>
        <label>Simplification Subtractor</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Effort_Hrs__c</fullName>
        <description>Where hours end up.The number of hours needed to implement the scope&apos;s functionality.</description>
        <inlineHelpText>Assumes &quot;Medium&quot; Complexity Effort.</inlineHelpText>
        <label>Effort (Hrs)</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_Effort_Hrs__c</fullName>
        <description>Calculated field on Efforts Hrs such as
Effort Hours + (High% of Effort Hours)</description>
        <formula>Effort_Hrs__c + (Effort_Hrs__c *  Complexity_Factor_High__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows High Efforts</inlineHelpText>
        <label>High Effort Hrs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hrs_Override_Reason__c</fullName>
        <description>This field stores the override reason of effort hrs in case when SA overrides the Effort Hrs of a particular effort</description>
        <inlineHelpText>Override reason for effort hrs.</inlineHelpText>
        <label>Hrs Override Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this effort active?</description>
        <inlineHelpText>Is this effort active?</inlineHelpText>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Low_Effort_Hrs__c</fullName>
        <description>Calculated on Effort Hrs such as
Effort Hrs - (Low% of Effort Hours)</description>
        <formula>Effort_Hrs__c - ( Effort_Hrs__c *  Complexity_Factor_Low__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Low Effort Hours</inlineHelpText>
        <label>Low Effort Hrs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <description>In what Phase....</description>
        <globalPicklist>E2_Phases</globalPicklist>
        <inlineHelpText>During which Phase is this effort expended?</inlineHelpText>
        <label>Phase</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resource_Level__c</fullName>
        <description>Contains list of all the possible resource levels that will be used in Estimator 2.0, Resource Request, Assignments, Contact and  Rate Cards.This defined Role+level will be considered as a distinct resource since each of these resource role will have varying rates based on the level defined on them.</description>
        <globalPicklist>E2_Resource_Level</globalPicklist>
        <inlineHelpText>Contains list of all the possible resource levels that will be used in Estimator 2.0, Resource Request, Assignments, Contact and  Rate Cards.This defined Role+level is a distinct resource since each of these roles will have varying rates based on level.</inlineHelpText>
        <label>Resource Level</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resource_Role__c</fullName>
        <description>Same picklist values as are available throughout the rest of our systems (Role/ResourceRole): Rate Card reference here https://appirio.my.salesforce.com/00N50000001v03g?setupid=CustomObjects</description>
        <globalPicklist>E2_Role</globalPicklist>
        <inlineHelpText>Aligned with Rate Card Roles</inlineHelpText>
        <label>Resource Role</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <description>Parent Scope</description>
        <inlineHelpText>Parent Scope</inlineHelpText>
        <label>Scope</label>
        <referenceTo>E2_Scope__c</referenceTo>
        <relationshipName>Efforts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source_Effort__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Effort</label>
        <referenceTo>E2_Effort__c</referenceTo>
        <relationshipName>Cloned_Efforts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Speciality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The skill needed in particular to implement the scope details.</description>
        <inlineHelpText>The skill needed in particular to implement the scope details.</inlineHelpText>
        <label>Speciality</label>
        <referenceTo>pse__Skill__c</referenceTo>
        <relationshipName>E2_Efforts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Effort</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Efforts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MandatoryPhaseValidation</fullName>
        <active>true</active>
        <description>Phase field is mandatory</description>
        <errorConditionFormula>ISPICKVAL(Phase__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Phase__c</errorDisplayField>
        <errorMessage>Phase cannot be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MandatoryRoleValidation</fullName>
        <active>true</active>
        <description>Role selection is mandatory to save an effort item record</description>
        <errorConditionFormula>ISPICKVAL(Resource_Role__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Resource_Role__c</errorDisplayField>
        <errorMessage>Role cannot be empty</errorMessage>
    </validationRules>
</CustomObject>